# kount

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  seal.toml  zensical.toml
.claude/commands/: commit-push-pr.md
.github/: CODE_OF_CONDUCT.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yml  publish-docs.yml  release.yml
crates/kount/: Cargo.toml
crates/kount/src/: main.rs  output.rs
crates/kount/tests/it/: count.rs  help.rs  main.rs  version.rs
crates/kount/tests/it/common/: mod.rs
crates/kount_cli/: Cargo.toml
crates/kount_cli/src/: args.rs
crates/kount_count/: Cargo.toml
crates/kount_count/src/: counter.rs  lib.rs  types.rs  walker.rs
crates/kount_dev/: Cargo.toml
crates/kount_dev/src/: generate_cli_reference.rs  main.rs
docs/: installation.md
docs/reference/: cli.md
docs/usage/: getting_started.md
