[package]
name = "kount"
version = "0.0.1-alpha.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kount"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kount_cli = { path = "../kount_cli" }
kount_count = { path = "../kount_count" }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
dunce = "1.0"
insta = { version = "1.46", features = ["filters"] }
regex = "1.12"
serde_json = "1.0"
tempfile = "3.24"

[lints]
workspace = true
