[package]
name = "kount_dev"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs-err = "3.2"
itertools = "0.14"
kount_cli = { path = "../kount_cli" }
markdown = "1.0"
pretty_assertions = "1.4"

[lints]
workspace = true
